[修改] 界面完成

--- a/redrock4/level2/index.html
+++ b/redrock4/level2/index.html
@@ -18,15 +18,71 @@
             <div class="article">
                 <div class="articlecontent">
                     <div class="info">
-                        <div class="name"></div>
-                        <div class="data"></div>
-                        <div class="UAV"></div>
+                        <div class="name">houzhenhong</div>
+                        <div class="data">2018-11-29</div>
+                        <div class="ua">Chrome</div>
                     </div>
                     <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
                 </div>
             </div>
         </div>
-        <div class="comment"></div>
+        <hr>
+        <div class="comment">
+            <div class="articles">
+                <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
+                <div class="article">
+                    <div class="articlecontent">
+                        <div class="info">
+                            <div class="name">houzhenhong</div>
+                            <div class="data">2018-11-29</div>
+                            <div class="ua">Chrome</div>
+                        </div>
+                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="articles">
+                <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
+                <div class="article">
+                    <div class="articlecontent">
+                        <div class="info">
+                            <div class="name">houzhenhong</div>
+                            <div class="data">2018-11-29</div>
+                            <div class="ua">Chrome</div>
+                        </div>
+                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
+                    </div>
+                    <div class="smallcomment">
+                        <div class="articles">
+                            <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
+                            <div class="article">
+                                <div class="articlecontent">
+                                    <div class="info">
+                                        <div class="name">houzhenhong</div>
+                                        <div class="data">2018-11-29</div>
+                                        <div class="ua">Chrome</div>
+                                    </div>
+                                    <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="articles">
+                            <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
+                            <div class="article">
+                                <div class="articlecontent">
+                                    <div class="info">
+                                        <div class="name">houzhenhong</div>
+                                        <div class="data">2018-11-29</div>
+                                        <div class="ua">Chrome</div>
+                                    </div>
+                                    <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
