留言板 ，删除测试代码

--- a/redrock4/level2/index.html
+++ b/redrock4/level2/index.html
@@ -17,7 +17,7 @@
     <div id="push">
         <div class="title">Lorem ipsum</div>
         <div class="articles">
-            <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
+            <div class="avatar"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></div>
             <div class="article">
                 <div class="articlecontent">
                     <div class="info">
@@ -31,60 +31,6 @@
         </div>
         <hr>
         <div class="comment" id="comment">
-            <div class="articles">
-                <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
-                <div class="article">
-                    <div class="articlecontent">
-                        <div class="info">
-                            <div class="name">houzhenhong</div>
-                            <div class="data">2018-11-29</div>
-                            <div class="ua">Chrome</div>
-                        </div>
-                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
-                    </div>
-                </div>
-            </div>
-            <div class="articles">
-                <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
-                <div class="article">
-                    <div class="articlecontent">
-                        <div class="info">
-                            <div class="name">houzhenhong</div>
-                            <div class="data">2018-11-29</div>
-                            <div class="ua">Chrome</div>
-                        </div>
-                        <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
-                    </div>
-                    <div class="smallcomment">
-                        <div class="articles">
-                            <div class="avatar"><a href="/member/1"><img src="https://cdn.v2ex.com/gravatar/972a36b803d3da31e70252ccfe56e9ce?d=retro&amp;s=64" alt="" class="avatar "></a></div>
-                            <div class="article">
-                                <div class="articlecontent">
-                                    <div class="info">
-                                        <div class="name">houzhenhong</div>
-                                        <div class="data">2018-11-29</div>
-                                        <div class="ua">Chrome</div>
-                                    </div>
-                                    <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="articles">
-                            <div class="avatar"><a href="/member/1"><img src="" alt="" class="avatar "></a></div>
-                            <div class="article">
-                                <div class="articlecontent">
-                                    <div class="info">
-                                        <div class="name">houzhenhong</div>
-                                        <div class="data">2018-11-29</div>
-                                        <div class="ua">Chrome</div>
-                                    </div>
-                                    <div class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quaerat voluptates quod expedita quis perspiciatis dolore fuga dolorem quasi, voluptate optio hic laudantium distinctio architecto accusantium officiis nostrum blanditiis suscipit.</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="articles comment postcomment" id="post">
             <div class="avatar" id="postavatar"></div>
