[提交] 使用标准方法查询原型

--- a/redrock8/src/counter-element.html
+++ b/redrock8/src/counter-element.html
@@ -2,6 +2,7 @@
 <!-- Css Carousel-->
 <div class="carrousel">
   <h2>Title</h2>
+  <!-- radio 单选按钮 -->
   <input type="radio" name="slides" id="radio-1" checked>
   <input type="radio" name="slides" id="radio-2">
   <input type="radio" name="slides" id="radio-3">
