[fix bug] 装饰器的 this 指向

--- a/redrock8/index.html
+++ b/redrock8/index.html
@@ -28,6 +28,10 @@
     </style>
 </head>
 <body>
-    <counter-element></counter-element>
+    <counter-element
+        time=2000
+        transition-mode="opacity"
+    >
+    </counter-element>
 </body>
 </html>
