[提交] 调整目录结构

--- a/redrock8/index.html
+++ b/redrock8/index.html
@@ -28,10 +28,10 @@
     </style>
 </head>
 <body>
-    <counter-element
+    <carouse-index
         time=2000
         transition-mode="opacity"
     >
-    </counter-element>
+    </carouse-index>
 </body>
 </html>
