[提交] 使用 左右切换

--- a/redrock8/index.html
+++ b/redrock8/index.html
@@ -30,7 +30,7 @@
 <body>
     <carouse-index
         time=2000
-        transition-mode="opacity"
+        transition-mode="slide"
     >
     </carouse-index>
 </body>
