--- a/redrock8/src/CarouseIndex/carouse-index.html
+++ b/redrock8/src/CarouseIndex/carouse-index.html
@@ -1,5 +1,5 @@
 <h1>Css Only Carousel</h1>
-<div class="carrousel">
+<div class="carousel">
   <h2>Title</h2>
   <ul class="slides"></ul>
   <div id="slidesNavigation"></div>
