style(item): HTML 添加 img 添加 alt 属性

--- a/redrock8/src/Item/item.html
+++ b/redrock8/src/Item/item.html
@@ -2,7 +2,7 @@
   <p>
     <q></q>
     <span class="author">
-      <img src="">
+      <img src="" alt="">
       <span class="author-name"></span>
     </span>
   </p>
