feat: Observe & Compile

--- a/redrock11/public/index.html
+++ b/redrock11/public/index.html
@@ -7,8 +7,10 @@
   <title>redrock11</title>
 </head>
 <body>
-  <button id="name">名字</button>
-  <button id="age">姓名</button>
-  <div id="can-change"></div>
+  <div id="app">
+      <button id="name">{{ nameText }}</button>
+      <button id="age">年龄</button>
+      <div id="can-change"></div>
+  </div>
 </body>
 </html>
