--- a/redrock11/public/index.html
+++ b/redrock11/public/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>redrock11</title>
 </head>
+
 <body>
   <div id="app">
-      <button id="name">{{ nameText }}</button>
-      <button id="age">年龄</button>
-      <div id="can-change"></div>
+    <div>姓名:{{nameText}}</div>
+    <div>年龄:{{ageText}}</div>
+    <button id="name">修改姓名</button>
+    <button id="age">修改年龄</button>
+    <div id="can-change"></div>
   </div>
 </body>
+
 </html>
